--- a/draft.html
+++ b/draft.html
@@ -10,20 +10,20 @@
     //rhomb conditionBlock(coordinates: x, y, width, height, inside text, height of text)
     function init() {
       var s = new CanvasState(document.getElementById('canvas'));
-      s.addShape(new roundedRect(50, 50 - 30, 80, 30, 10, 1, "Begin"));
-      s.addShape(new conditionBlock(50, 100 - 30, 80, 50, 1, "i<5"));
-      s.addShape(new arrow(90, 80 - 30, 0, 20, 0));
-      s.addShape(new arrow(90, 150 - 30, 0, 20, 0, '+'));
-      s.addShape(new rect(50, 170 - 30, 80, 30, 1, "i++"));
+      s.addShape(new roundedRect(50, 50 - 30, 80, 30, 10, 1, 0, "Begin"));
+      s.addShape(new conditionBlock(50, 100 - 30, 80, 50, 1, 0, "i<5"));
+      s.addShape(new arrow(90, 80 - 30, 0, 20));
+      s.addShape(new arrow(90, 150 - 30, 0, 20, '+'));
+      s.addShape(new rect(50, 170 - 30, 80, 30, 1, 0, "i++"));
       s.addShape(new line(90, 200 - 30, 0, 10));
       s.addShape(new line(90, 210 - 30, -70, 0));
       s.addShape(new line(20, 210 - 30, 0, -85));
       s.addShape(new arrow(20, 125 - 30, 30, 0));
-      s.addShape(new line(130, 125 - 30, 20, 0, 0, '-'));
+      s.addShape(new line(130, 125 - 30, 20, 0, '-'));
       s.addShape(new line(150, 125 - 30, 0, 105));
       s.addShape(new line(150, 230 - 30, -60, 0));
       s.addShape(new arrow(90, 230 - 30, 0, 20));
-      s.addShape(new roundedRect(50, 250 - 30, 80, 30, 10, 0, "End"));
+      s.addShape(new roundedRect(50, 250 - 30, 80, 30, 10, 0, 0, "End"));
     }    
   </script>
   <style type= "text/css">
