Objects swaping done
Every day I stay further from God

--- a/draft.html
+++ b/draft.html
@@ -24,6 +24,12 @@
       s.addShape(new line(150, 230 - 30, -60, 0));
       s.addShape(new arrow(90, 230 - 30, 0, 20));
       s.addShape(new roundedRect(50, 250 - 30, 80, 30, 10, 0, 0, "End"));
+
+      s.addShape(new rect(0, 0, 80, 30, 1, 1, "i<5"));
+      s.addShape(new rect(0, 0, 80, 30, 1, 1, "i>=5"));
+      s.addShape(new rect(0, 0, 80, 30, 1, 1, "i--"));
+      s.addShape(new rect(0, 0, 80, 30, 1, 1, "i+2"));
+      s.addShape(new roundedRect(0, 0, 80, 30, 10, 1, 1, "Start"));
     }    
   </script>
   <style type= "text/css">
